# decentralizedbank

./: README.md
frontend/: README.md
frontend/admin/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js
frontend/admin/src/: main.ts  styles.scss
frontend/client/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js  tsconfig.json
frontend/client/src/: index.html  main.ts  styles.scss
frontend/scripts/: build.sh
smart-contract/: .gitignore  Anchor.toml  README.md
smart-contract/apps/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
smart-contract/apps/liquidator/: package.json
smart-contract/docs/: commands.txt
smart-contract/scripts/: airdrop_bot.sh  build_apps.sh  build_getbank.sh  reset.sh  run_apps.sh  run_localnet.sh  stop_apps.sh  stop_localnet.sh
smart-contract/smart-contract/: .gitignore  Anchor.toml  README.md
smart-contract/smart-contract/programs/get_bank/: Cargo.toml
smart-contract/smart-contract/programs/get_bank/src/: errors.rs  lib.rs
smart-contract/smart-contract/programs/get_bank/src/math/: arithmetic.rs  decimal.rs  mod.rs
smart-contract/smart-contract/programs/get_bank/src/oracles/: mod.rs  pyth.rs
smart-contract/smart-contract/programs/get_bank/src/states/: asset.rs  bank.rs  borrow.rs  deposit.rs  last_update.rs  mod.rs  utils.rs
statistics-backend/: .gitignore  README.md  pom.xml
statistics-backend/scripts/: build.sh  run.sh  stop.sh
statistics-backend/statistics-backend/: .gitignore  README.md  pom.xml
(+622 files in other folders)
